--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 
 [dependencies]
 hyper = { version = "0.14.4" }
-pin-project = "1.0.8"
+pin-project-lite = "0.2.10"
 tokio = "1.2.0"
 tokio-tungstenite = "0.19.0"
 tungstenite = "0.19.0"
