--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ documentation = "https://docs.rs/hyper-tungstenite"
 edition = "2021"
 
 [dependencies]
-hyper = { version = "0.14.4" }
+http-body-util = "0.1.0"
+hyper = { version = "1.0.0" }
+hyper-util = { version = "0.1.0", features = ["tokio"] }
 pin-project-lite = "0.2.10"
 tokio = "1.2.0"
 tokio-tungstenite = "0.20.0"
@@ -20,6 +22,6 @@ tungstenite = "0.20.0"
 
 [dev-dependencies]
 assert2 = "0.3.4"
-hyper = { version = "0.14.18", features = ["http1", "server", "tcp"] }
+hyper = { version = "1.0.0", features = ["http1", "server"] }
 tokio = { version = "1.2.0", features = ["net", "macros", "rt-multi-thread"] }
 futures = { version = "0.3.12" }
